Sync Activities Regardless of Nepomuk Status

NepomukActivityManager::syncActivities handles internally the presence
of the Nepomuk Service, and if the service is not initialized, it
populates the m_cache_activityIds list, which is later required to be
non-empty to sync again with Nepomuk in
NepomukActivityManager::nepomukServiceStarted.

BUG: 301971
FIXED-IN: 4.10
REVIEW: 108446